# ai-trading-bot

./: .coverage  .coverage.Mac.lan.22059.XBHIQsvx  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DOCKER_FIXES.md  Dockerfile  Dockerfile.optimized  IMPLEMENTATION_GUIDE.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  QUICKSTART.md  QUICK_INTEGRATION_README.md  README-E2E.md  README.md  add_strategy_apis.py  admin_user_diagnostic.py  ai-trading-bot-fixed.service  ai-trading-bot.service  ai_fix_log.json  ai_ml_auto_bot_final.py  auto_deploy.sh  auto_fix_deploy.sh  check_state.py  clean_vps.sh  cleanup_guide.sh  complete_clean_vps.sh  comprehensive_dashboard_test.py  comprehensive_diagnostic.py  comprehensive_test_suite.py  create_admin.py  dashboard_audit_todo.md  deploy-k8s.sh  deploy.prod.sh  deploy_docker_vps.sh  deploy_files_only.sh  deploy_timescaledb.sh  deploy_to_vps_complete.sh  deploy_with_fix.sh  (+76 more)
.github/: PULL_REQUEST_TEMPLATE.md
api_routes/: auth.js  middleware.js  robot.js  users.js
app/: __init__.py  assets.py  bootstrap.py  check_user.py  cli.py  config.py  extensions.py  migrations.py  models.py
bot/: strategy.py
config/: dashboard_config.py  deploy.env  deploy.env.example  deploy.env.production  performance.py  resource_manager.py  ribs_config.yaml
configs/: agent-config.yaml  config.json  developer_prompt.md  system_prompt.md  user_prompt_template.md
core/: README.md  optimized_bot.py
data/: nvme_optimized_handler.py  test_data.feather  test_data.parquet
database_layer/: db.js
docker/: entrypoint.sh
docs/: auto_update_strategy.md  binance_compliance.md  deployment_guide.md  final_hammer_checklist.md  follow_up_priorities.md  ml_telemetry.md  modularization_plan.md  multi_user_strategy.md  repo_cleanup_plan.md  self_improvement_plan.md  status_diagnostics.md  system_trades.md  timescaledb.md  ui_journal_backtest_fix_notes.md  uptime_probes.md
instance/: admin_test.db  app.db  fresh_test2.db  trading_bot.db
integrations/: README.md  __init__.py  config_examples.py  dashboard_integration.py  enhanced_dashboard_example.py  example_integration.py
k8s/: README.md  configmap.yaml  hpa.yaml  ingress.yaml  network-policy.yaml  optimized-deployment.yaml  pdb.yaml  pvc.yaml  secret.yaml  service.yaml
models/: model_1768153104.joblib  model_factory.py
monitoring/: README.md  alert_manager.py  prometheus.yml
nginx/: nginx.conf
optimized_trade_data/: comprehensive_trades.json  trading_journal.json
robot_module/: robot.js
scripts/: __init__.py  backtest_health_check.py  backup_production.sh  bot_update.py  build-assets.mjs  check_ribs_health.py  clean_trade_history.py  clear_trade_history.py  create_deployment_bundle.py  debug_login_metrics.py  deploy_to_vps.sh  diagnose_production.py  http_capture_login.py  (+24 more)
(+367 files in other folders)
