[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trading-bot"
version = "4.0.0"
description = "Ultimate Professional AI Trading Bot with Advanced ML and CRT Module"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "Flask==2.3.3",
    "flask-cors==4.0.0",
    "pandas==2.0.3",
    "numpy==1.24.3",
    "scikit-learn==1.3.0",
    "joblib==1.3.2",
    "requests==2.31.0",
    "scipy==1.11.1",
    "python-binance==1.0.17",
    "cryptography==41.0.7",
    "TA-Lib==0.4.25",
    "matplotlib==3.7.2",
    "seaborn==0.12.2",
    "gunicorn==21.2.0",
    "ujson==5.11.0",
    "Flask-Assets==2.1",
    "cssmin==0.2.0",
    "jsmin==3.0.1",
    "python-dotenv==1.0.0",
    "Flask-Login==0.6.3",
    "Flask-WTF==1.1.1",
    "WTForms==3.0.1",
    "Flask-SQLAlchemy==3.0.5",
    "python-socketio==5.8.0",
    "eventlet==0.33.3",
]

[project.optional-dependencies]
dev = [
    "flake8==6.1.0",
    "black==23.12.1",
    "mypy==1.8.0",
    "pytest==8.4.2",
    "pytest-cov==4.1.0",
    "pre-commit==3.6.0",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".venv",
    "migrations",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "talib.*",
    "binance.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=30",
]
markers = [
    "asyncio: marks tests as async (using pytest-asyncio)",
]